exercises now working
